--- a/_config.yml
+++ b/_config.yml
@@ -9,72 +9,71 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Bruno's Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Bruno Pimenta"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://brunoppp.github.io/page # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "https://github.com/brunoppp/page"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  avatar           : "IMG_2446_perfil.jpg"
+  name             : "Bruno Pimenta"
+  pronouns         : "he/him"  
+  location         : "Davis, California"
+  employer         : "University of California, Davis"
   uri              : # URL
-  email            : "none@example.org" 
+#  email            : "bpimenta@ucdavis.edu" 
 
   # Academic websites
-  academia         : # URL
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  #academia         : # URL
+  #arxiv            : # URL - Update with the correct link to your profile
+  #googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  #impactstory      : # URL
+  #orcid            : "http://orcid.org/yourorcidurl"
+  #semantic         : # URL
+  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #researchgate     : # URL
+  #scopus           : # URL
 
   # Repositories and software development
-  bitbucket        : # Username - Update with your username on the site
-  codepen          : # Username
-  dribbble         : # Username
+ # bitbucket        : # Username - Update with your username on the site
+ # codepen          : # Username
+ # dribbble         : # Username
   github           : "academicpages"
-  kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+ # kaggle           : # Username  
+ # stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
-  facebook         : # Username
-  flickr           : # Username
-  foursquare       : # Username
-  goodreads        : # Username
-  google_plus      : # Username
-  keybase          : # Username
-  instagram        : # Username
-  lastfm           : # Username
-  linkedin         : # Username
-  mastodon         : # URL
-  medium           : # URL
-  pinterest        : # Username
-  soundcloud       : # Username
-  steam            : # Username
-  telegram         : # URL
-  tumblr           : # Username
-  twitter          : # Username for X / Twitter
-  vine             : # Username
-  weibo            : # Username
-  wikipedia        : # Username
-  xing             : # Username
-  youtube          : # Username
-  zhihu            : # Username
+ # bluesky          : "bsky.app" # Replace this with you Bluesky username
+ # facebook         : # Username
+ # flickr           : # Username
+ # foursquare       : # Username
+ # goodreads        : # Username
+ # google_plus      : # Username
+ # keybase          : # Username
+ # instagram        : # Username
+ # lastfm           : # Username
+ # linkedin         : # Username
+ # mastodon         : # URL
+ # medium           : # URL
+ # pinterest        : # Username
+ # soundcloud       : # Username
+ # steam            : # Username
+ # telegram         : # URL
+ # tumblr           : # Username
+ # twitter          : # Username for X / Twitter
+ # vine             : # Username
+ # weibo            : # Username
+ # wikipedia        : # Username
+ # xing             : # Username
+ # youtube          : # Username
+ # zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
