--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Bruno's Homepage"
+title                    : "Bruno Pimenta"
 title_separator          : "-"
 name                     : &name "Bruno Pimenta"
 description              : &description "personal description"
