--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
 main:
 
   - title: "CV"
-    url: /files/cv.pdf
+    url: /files/Bruno_Pimenta_CV.pdf
 
   - title: "Research"
     url: /research/
