--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Bruno Pimenta"
 title_separator          : "-"
 name                     : &name "Bruno Pimenta"
 description              : &description "personal description"
-url                      : https://brunoppp.github.io/page # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+url                      : https://brunoppp.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+baseurl                  : "/page" # the subpath of your site, e.g. "/blog"
 repository               : "https://github.com/brunoppp/page"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
